CHATS_SIT/force-app/main/default/objects/CHATS_Support__c.object
<CustomObject>
    <fields>
        <fullName>Sub_Priority__c</fullName>
        <label>Sub Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supervisor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Support_Category__c</fullName>
        <inlineHelpText>Please identify if your support ticket is related to CCCAP Policy or the CHATS System. Specify further in the Support Type field.</inlineHelpText>
        <label>Support Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Team_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Team Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CHATS_Support3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <inlineHelpText>&quot;System Issue/Request&quot;-technical issues, requests, errors, etc.  &quot;Question/Clarification&quot;-questions regarding CCCAP rules or procedures. &quot;System Navigation Questions/Clarification&quot;- System navigation.
&quot;Ideas For CHATS&quot;-suggestions on improving CHATS.</inlineHelpText>
        <label>Support Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Support_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Question/Clarification</fullName>
                </value>
                <value>
                    <fullName>Log In/Reset Question/Issue</fullName>
                </value>
                <value>
                    <fullName>System Navigation Question/Clarification</fullName>
                </value>
                <value>
                    <fullName>System Issue/Request</fullName>
                </value>
                <value>
                    <fullName>System Access</fullName>
                </value>
                <value>
                    <fullName>Ideas for CHATS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temporary_Access_End_Date__c</fullName>
        <label>End Date if Temporary Access</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Testing Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Closure_Date__c</fullName>
        <inlineHelpText>Date this ticket was resolved by State CCCAP Team/Helpdesk</inlineHelpText>
        <label>Ticket Closure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Created_Date_Date_only__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Created Date (Date only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_to_Initial_Response_Business_Hours__c</fullName>
        <formula>9 * (
( 5 * FLOOR( ( DATEVALUE( Initial_Response_Date__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE(Initial_Response_Date__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 9 * ( MOD( Initial_Response_Date__c - DATETIMEVALUE( &apos;1900-01-08 13:30:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE(  CreatedDate  ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 9 * ( MOD( CreatedDate- DATETIMEVALUE( &apos;1900-01-08 13:30:00&apos; ), 1) ) )
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Initial Response-Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Initial_Response_Clock_Hours__c</fullName>
        <formula>TEXT( FLOOR(   Initial_Response_Date__c  -  CreatedDate  ) ) + &apos; days &apos; +
TEXT( FLOOR( MOD((Initial_Response_Date__c -  CreatedDate) * 1440, 1440) / 60) ) + &apos; hours &apos; +
TEXT( ROUND(MOD( MOD((Initial_Response_Date__c -  CreatedDate) * 1440, 1440), 60), 2) ) + &apos; mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Initial Response-Clock Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_TIcket_Closure_Business_Hours__c</fullName>
        <formula>9 * (
( 5 * FLOOR( ( DATEVALUE(   Ticket_Closure_Date__c   ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE(Ticket_Closure_Date__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 9 * ( MOD( Ticket_Closure_Date__c - DATETIMEVALUE( &apos;1900-01-08 13:30:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE(  CreatedDate  ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 9 * ( MOD( CreatedDate- DATETIMEVALUE( &apos;1900-01-08 13:30:00&apos; ), 1) ) )
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to TIcket Closure-Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Ticket_Closure_Clock_Hours__c</fullName>
        <formula>TEXT( FLOOR( Ticket_Closure_Date__c    -  CreatedDate  ) ) + &apos; days &apos; +
TEXT( FLOOR( MOD((Ticket_Closure_Date__c-  CreatedDate) * 1440, 1440) / 60) ) + &apos; hours &apos; +
TEXT( ROUND(MOD( MOD((Ticket_Closure_Date__c -  CreatedDate) * 1440, 1440), 60), 2) ) + &apos; mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Ticket Closure-Clock Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check here if you will be attaching a screen shot, document, etc.  Ensure your document is saved in your computer. After saving support ticket, click on ticket id to open record. Click on related tab. Click &quot;upload file&quot;. Select file. Click &quot;Done&quot;.</inlineHelpText>
        <label>Uploaded Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the staff member being replaced. Note that the system will only allow specifying an active CHATS user. If the staff member being replaced is already inactive in CHATS, select &quot;No&quot; to &quot;Is this staff member replacing another?&quot;.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CHATS_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Which_other_county__c</fullName>
        <label>Which other county?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00005</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Communication Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SupportNumber_DigitOnly__c</fullName>
        <formula>RIGHT(Name, 10)</formula>
        <label>Support Number (Digit Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Email__c</fullName>
        <formula>Support_Team_Assignee__r.Email</formula>
        <label>Assignee&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_FullName__c</fullName>
        <formula>Support_Team_Assignee__r.FirstName + &apos; &apos; + Support_Team_Assignee__r.LastName</formula>
        <label>Assignee&apos;s Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwaitingUser_FullName__c</fullName>
        <formula>Awaiting_User__r.FirstName + &apos; &apos; + Awaiting_User__r.LastName</formula>
        <label>AwaitingUser&apos;s Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awaiting_User_Email__c</fullName>
        <formula>Awaiting_User__r.Email</formula>
        <label>Awaiting User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Email_Recipient_Name__c</fullName>
        <description>o update the Recipient name in Email template : Access Request Help Desk Template</description>
        <formula>IF( (ISPICKVAL(Status__c , &apos;Awaiting User&apos;) &amp;&amp; (RecordType.Name = &apos;System Access Request&apos;)), AwaitingUser_FullName__c , Owner:User.FirstName + &apos; &apos; + Owner:User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Email Recipient Name</label>
        <type>Text</type>
    </fields>
    <label>Support</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Root_Cause__c</columns>
        <columns>JIRA_ID__c</columns>
        <columns>Priority__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Awaiting User,Elevated</value>
        </filters>
        <filters>
            <field>JIRA_ID__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Root_Cause__c</field>
            <operation>equals</operation>
            <value>Clarification</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIRA_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>County__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Elevated</value>
        </filters>
        <filters>
            <field>Root_Cause__c</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filters>
        <label>Change Requests</label>
    </listViews>
    <listViews>
        <fullName>Closed_Missing_Closed_Date</fullName>
        <columns>NAME</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <columns>Ticket_Created_Date_Date_only__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>CHATS_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fixed/Completed,Change Denied</value>
        </filters>
        <filters>
            <field>Ticket_Closure_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Closed Missing Closed Date</label>
    </listViews>
    <listViews>
        <fullName>Closed_Ticket</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>JIRA_ID__c</columns>
        <columns>County__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>Elevated_to__c</columns>
        <columns>Expected_Results__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fixed/Completed,Change Denied</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CHATS_Support__c.Support_Ticket</value>
        </filters>
        <label>Closed Tickets</label>
    </listViews>
    <listViews>
        <fullName>Closed_Tickets</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolution__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>Status__c</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fixed/Completed,Change Denied</value>
        </filters>
        <label>Closed Tickets</label>
    </listViews>
    <listViews>
        <fullName>Closed_with_wrong_root_cause</fullName>
        <columns>NAME</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <columns>Ticket_Created_Date_Date_only__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>JIRA_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ticket_Closure_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Root_Cause__c</field>
            <operation>equals</operation>
            <value>Pending Triage</value>
        </filters>
        <label>Closed with wrong root cause</label>
    </listViews>
    <listViews>
        <fullName>Missing_Support_Team_Assignee</fullName>
        <columns>NAME</columns>
        <columns>Root_Cause__c</columns>
        <columns>Status__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Elevated,Change Approved</value>
        </filters>
        <filters>
            <field>Support_Team_Assignee__c</field>
            <operation>equals</operation>
        </filters>
        <label>Missing Support Team Assignee</label>
    </listViews>
    <listViews>
        <fullName>My_Tickets</fullName>
        <columns>NAME</columns>
        <columns>CHATS_Area__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>Elevated_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Ticket__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Tickets</label>
    </listViews>
    <listViews>
        <fullName>New_with_wrong_root_cause</fullName>
        <columns>NAME</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <columns>Ticket_Created_Date_Date_only__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>JIRA_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Root_Cause__c</field>
            <operation>equals</operation>
            <value>System Issue</value>
        </filters>
        <label>New with wrong root cause</label>
    </listViews>
    <listViews>
        <fullName>Open_Tickets</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIRA_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>County__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Elevated</value>
        </filters>
        <label>Open Tickets</label>
    </listViews>
    <listViews>
        <fullName>Open_Tickets_Authorizations</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIRA_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>County__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Elevated</value>
        </filters>
        <filters>
            <field>CHATS_Area__c</field>
            <operation>equals</operation>
            <value>Authorization</value>
        </filters>
        <label>Open Tickets - Authorizations</label>
    </listViews>
    <listViews>
        <fullName>Open_Tickets_Case_Related</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIRA_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>County__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Elevated</value>
        </filters>
        <filters>
            <field>CHATS_Area__c</field>
            <operation>equals</operation>
            <value>Application Process Queue,Case,Individual</value>
        </filters>
        <label>Open Tickets - Cases and Apps</label>
    </listViews>
    <listViews>
        <fullName>Open_Tickets_Correspondence</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIRA_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>County__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Elevated</value>
        </filters>
        <filters>
            <field>CHATS_Area__c</field>
            <operation>equals</operation>
            <value>Correspondence,Task</value>
        </filters>
        <label>Open Tickets - Correspondence, Tasks</label>
    </listViews>
    <listViews>
        <fullName>Open_Tickets_CountyPlans</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIRA_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>County__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Elevated</value>
        </filters>
        <filters>
            <field>CHATS_Area__c</field>
            <operation>equals</operation>
            <value>County,County Plan,County Rate Plan</value>
        </filters>
        <label>Open Tickets - County Plans</label>
    </listViews>
    <listViews>
        <fullName>Open_Tickets_Eligibility</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>CHATS_Area__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIRA_ID__c</columns>
        <columns>County__c</columns>
        <columns>Support_Team_Assignee__c</columns>
        <columns>Ticket_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Elevated</value>
        </filters>
        <filters>
            <field>CHATS_Area__c</field>
            <operation>equals</operation>
            <value>Eligibility,Wait list</value>
        </filters>
        <label>Open Tickets - Eligibility</label>
    </listViews>
    <nameField>
        <displayFormat>Support - {0000000000}</displayFormat>
        <label>CHATS Support Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support</pluralLabel>
    <recordTypes>
        <fullName>Support_Ticket</fullName>
        <active>true</active>
        <description>For CHATS user to log issues, questions and standard requests</description>
        <label>Support Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Access_Request</fullName>
        <active>true</active>
        <description>Allows supervisors to request system access for new users, and report deactivations</description>
        <label>System Access Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Access_Request_Supervisor_Access_Only</fullName>
        <active>false</active>
        <description>Only Supervisors can select &quot;Access Request&quot;, &quot;Change Profile&quot;, or &quot;Deactivate Access&quot; from the pick-list</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Support_Type__c, &quot;Access Request&quot;), 
ISPICKVAL(Support_Type__c, &quot;Deactivate Access&quot;),
ISPICKVAL(Support_Type__c, &quot;Change Profile&quot;),
And( 
$Profile.Name &lt;&gt; &quot;Eligibility Worker Supervisor&quot;, 
$Profile.Name &lt;&gt; &quot;Fiscal Worker Supervisor&quot;,
$Profile.Name &lt;&gt; &quot;Provider Worker Supervisor&quot;,
$Profile.Name &lt;&gt; &quot;Universal User&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Admin&quot;,
$Profile.Name &lt;&gt; &quot;CHATS System Administrator&quot;
))</errorConditionFormula>
        <errorDisplayField>Support_Type__c</errorDisplayField>
        <errorMessage>You must be a Supervisor or Universal Worker to select &quot;Access Request&quot;, &quot;Change Profile&quot;, or &quot;Deactivate Access&quot;.</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Can_Only_Edit_NEW_CHATS_Support_Ticket</fullName>
        <active>true</active>
        <description>Allows users to only edit New status tickets.</description>
        <errorConditionFormula>AND 
            ( ISPICKVAL( PRIORVALUE(Status__c),&quot;Fixed/Completed&quot;), 
            NOT(OR($Profile.Name = &quot;Eligibility Worker&quot;,
            $Profile.Name = &quot;Fiscal Worker&quot;,
            $Profile.Name = &quot;Provider Worker&quot;,
            $Profile.Name = &quot;Universal User&quot;,
            $Profile.Name = &quot;Read Only User&quot;, 
            $Profile.Name = &quot;Eligibility Worker Supervisor&quot;, 
            $Profile.Name = &quot;Fiscal Worker Supervisor&quot;, 
            $Profile.Name = &quot;Provider Worker Supervisor&quot;, 
            $Profile.Name = &quot;System Administrator&quot;, 
            $Profile.Name = &quot;System Admin&quot;, 
            $Profile.Name = &quot;CHATS System Administrator&quot;,
            $Profile.Name = &quot;Business Office Worker&quot;,
            $Profile.Name = &quot;Business Office Supervisor&quot;,
            $Profile.Name = &quot;State IT User&quot;,
            $Profile.Name = &quot;State Program Administrator&quot;,
            $Profile.Name = &quot;CCCAP Program Internal Team&quot;
            )) 
            )</errorConditionFormula>
        <errorMessage>You cannot Edit a Fixed/Completed Support Ticket.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_In_Progress_Tickets</fullName>
        <active>true</active>
        <description>Prevents users from editing an In-Progress Status ticket</description>
        <errorConditionFormula>AND
            (ISPICKVAL(PRIORVALUE(Status__c), &quot;In Progress&quot;), 
            NOT(OR(
             $Profile.Name = &quot;Eligibility Worker&quot;, 
             $Profile.Name = &quot;Fiscal Worker&quot;, 
             $Profile.Name = &quot;Provider Worker&quot;, 
             $Profile.Name = &quot;Business Office Worker&quot;, 
             $Profile.Name = &quot;Read Only User&quot;, 
             $Profile.Name = &quot;Eligibility Worker Supervisor&quot;, 
             $Profile.Name = &quot;Fiscal Worker Supervisor&quot;, 
             $Profile.Name = &quot;Provider Worker Supervisor&quot;, 
             $Profile.Name = &quot;Business Office Supervisor&quot;, 
             $Profile.Name = &quot;Universal User&quot;, 
             $Profile.Name = &quot;State IT User&quot;, 
             $Profile.Name = &quot;State Program Administrator&quot;, 
             $Profile.Name = &quot;System Administrator&quot;, 
             $Profile.Name = &quot;System Admin&quot;, 
             $Profile.Name = &quot;CHATS System Administrator&quot;,
             $Profile.Name = &quot;CCCAP Program Internal Team&quot;
            )) 
           )</errorConditionFormula>
        <errorMessage>You cannot Edit an In Progress Support Ticket. State Staff have already begun working on this ticket.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complete_Staff_Member_Being_Replaced</fullName>
        <active>true</active>
        <description>Returns an error if Yes is selected in the Is this staff member replacing another field, but no member is selected.</description>
        <errorConditionFormula>AND(
 OR(ISBLANK(  Name_of_staff_member_being_replaced__c  ) ,
ISBLANK( Date_to_Deactivate_Previous_Staff__c ),ISPICKVAL( Reason_for_Deactivation__c,&apos;&apos;)),
ISPICKVAL( Is_this_staff_member_replacing_another__c ,&quot;Yes&quot;))</errorConditionFormula>
        <errorDisplayField>Name_of_staff_member_being_replaced__c</errorDisplayField>
        <errorMessage>You must choose the name of the ACTIVE CHATS staff member that is being replaced, and complete the &quot;Date to deactivate previous staff member&quot; and &quot;Reason for Deactivation&quot; fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateEndIfTemporaryAccess6Months</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName =&apos;System_Access_Request&apos;,Temporary_Access_End_Date__c  &gt;
DATE(
  YEAR( Start_Deactivation_Change_Date__c ) + FLOOR( ( MONTH ( Start_Deactivation_Change_Date__c ) + 6 - 1 ) / 12 ),
  MOD( MONTH ( Start_Deactivation_Change_Date__c ) + 6 - 1 + 
    IF( DAY ( Start_Deactivation_Change_Date__c ) &gt; CASE( MOD( MONTH( Start_Deactivation_Change_Date__c ) + 6 - 1, 12 ) + 1, 
      2, 28,
      4, 30,
      6, 30,
      9, 30, 
      11, 30,
      31 ), 1, 0 ), 12 ) + 1,
    IF( DAY( Start_Deactivation_Change_Date__c ) &gt; CASE( MOD( MONTH( Start_Deactivation_Change_Date__c ) + 6 - 1, 12 ) + 1,
      2, 28, 
      4, 30, 
      6, 30, 
      9, 30, 
      11, 30, 
      31 ), 
    1, DAY( Start_Deactivation_Change_Date__c )
  )
))</errorConditionFormula>
        <errorDisplayField>Temporary_Access_End_Date__c</errorDisplayField>
        <errorMessage>End Date if Temporary Access cannot be greater than 6 months from Begin Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateEndIfTemporaryAccessUniversalUser</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Access_Level_Requested__c  , &apos;Universal User&apos;),  ISPICKVAL(Reason_for_Universal_User__c , &apos;1&apos;), ISNULL( Temporary_Access_End_Date__c ), RecordType.DeveloperName =&apos;System_Access_Request&apos; )</errorConditionFormula>
        <errorDisplayField>Temporary_Access_End_Date__c</errorDisplayField>
        <errorMessage>End Date if Temporary Access is required when Access LevelRequested is Universal User and Reason for Universal User is Time Limited temporary access request (No longer than 6 months at a time)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Justification_for_Access_Request_Require</fullName>
        <active>true</active>
        <description>Access request for Read only or Universal User requires justification and information entered in the description field.   (WILL ADD Universal User value into rule when Universal user becomes picklist option in Access Level Requested Field)</description>
        <errorConditionFormula>AND( 
ISBLANK(Access_Request_Title_Info_Justification__c), 
ISPICKVAL(Access_Level_Requested__c,&quot;Read Only&quot;))</errorConditionFormula>
        <errorDisplayField>Access_Request_Title_Info_Justification__c</errorDisplayField>
        <errorMessage>Please enter the user&apos;s position title and information when requesting &quot;Read Only&quot; access. See helptext for information needed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Select_Who_Elevated_To</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Date_Elevated__c)),
(ISPICKVAL(Elevated_to__c, &quot;&quot;))
)</errorConditionFormula>
        <errorDisplayField>Elevated_to__c</errorDisplayField>
        <errorMessage>Enter who the ticket was elevated to. May also specify more in Internal Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReadOnly_Required_Fields</fullName>
        <active>true</active>
        <description>Requires completion of all necessary fields on the system access page layout.</description>
        <errorConditionFormula>AND( 
            ISPICKVAL(Support_Type__c, &quot;Read-Only Access Request&quot;), 
            $Profile.Name==&quot;Eligibility Worker Supervisor&quot;, 
            $Profile.Name==&quot;Fiscal Worker Supervisor&quot;, 
            $Profile.Name==&quot;Provider Worker Supervisor&quot;, 
            $Profile.Name==&quot;Universal User&quot;, 
            $Profile.Name== &quot;CCCAP Program Internal Team&quot;, 
            $Profile.Name==&quot;System Administrator&quot;, 
            $Profile.Name==&quot;System Admin&quot;, 
            $Profile.Name==&quot;CHATS System Administrator&quot;, 
            OR( 
            ISBLANK(Email_Address__c), 
            ISBLANK(Last_Name__c), 
            ISBLANK(First_name__c), 
            ISBLANK(Phone_Number__c), 
            ISBLANK(Start_Deactivation_Change_Date__c), 
            ISBLANK(TEXT(Is_this_staff_member_replacing_another__c)), 
            ISBLANK(TEXT(Access_Level_Requested__c)) 
            ) 
            )</errorConditionFormula>
        <errorMessage>For a Read-Only Access Request, Please ensure the following fields have been completed: Start Date; First Name; Last Name; Email Address; Profile Name; Phone #; Is this staff member replacing another.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Deactivation_Required_Prev_Staff</fullName>
        <active>true</active>
        <description>Reason for Deactivation is not specified after stating staff is replacing another.</description>
        <errorConditionFormula>AND(ISPickval(Is_this_staff_member_replacing_another__c, &apos;Yes&apos;),Ispickval( Reason_for_Deactivation__c ,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Reason_for_Deactivation__c</errorDisplayField>
        <errorMessage>You must specify the Reason for Deactivation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReasonforUniversalReasonRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName =&apos;System_Access_Request&apos;,ISPICKVAL(Access_Level_Requested__c , &apos;Universal User&apos;), ISBLANK( TEXT(Reason_for_Universal_User__c) )  )</errorConditionFormula>
        <errorDisplayField>Reason_for_Universal_User__c</errorDisplayField>
        <errorMessage>Reason for Universal reason is required for Access Level requested &apos;Universal User&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Actual_Results_if_Supp_Cat_is_System</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Support_Category__c , &apos;System&apos;), RecordType.DeveloperName =&apos;Support_Ticket&apos;,   ISBLANK( Actual_Results__c)    )</errorConditionFormula>
        <errorDisplayField>Actual_Results__c</errorDisplayField>
        <errorMessage>Required when Support Category is System.</errorMessage>
    </validationRules>
</CustomObject>